--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"fzaninotto/faker": "1.5.*@dev",
+		"badcow/lorem-ipsum": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
@@ -34,3 +36,6 @@
 	},
 	"minimum-stability": "stable"
 }
+
+
+ 
